--- a/project.html
+++ b/project.html
@@ -8,13 +8,13 @@
 
 <div class="screensquare">
     
-      <div class = "mini_block sp1  f12"> 
+      <div class = "mini_block sp1  f12" onclick="handleClick8()> 
           <img class = "sizer p1  " src="assets/Imagesw/download.jpg">
           <div class ="tsq ">
 
-            <p class=" fint"> AI Project</p>
-            <p class="mid"> Coming Soon   
-            <p class= "ht"> TBD</p>
+            <p class=" fint"> Data Vizualization Project</p>
+            <p class="mid"> Statistical models utilized to showcase data on Cristiano Ronaldo's Career.
+            <p class= "ht"> HTML CSS & Javascript</p>
             </p>
           </div>
 
@@ -119,6 +119,9 @@
             window.location.href="index.html";
               }    
               function handleClick4() {
+            window.location.href="assets/Rpsfin/RPS FINAL.html";
+              }
+              function handleClick8() {
             window.location.href="assets/Rpsfin/RPS FINAL.html";
               }
               function handleClick5() {
