--- a/project.html
+++ b/project.html
@@ -9,7 +9,7 @@
 <div class="screensquare">
     
       <div class = "mini_block sp1  f12" onclick="handleClick8()> 
-          <img class = "sizer p1  " src="assets/Imagesw/download.jpg">
+          <img class = "sizer p1  " src="assets/Icons/Hidlaho.png">
           <div class ="tsq ">
 
             <p class=" fint"> Data Vizualization Project</p>
