--- a/project.html
+++ b/project.html
@@ -8,8 +8,8 @@
 
 <div class="screensquare">
     
-      <div class = "mini_block sp1  f12" onclick="handleClick8()> 
-          <img class = "sizer p1  " src="assets/Icons/Hidlaho.png">
+      <div class = "mini_block sp1  f12" onclick="handleClick8()"> 
+          <img class = "sizer p1" src="assets/Icons/Hidlaho.png">
           <div class ="tsq ">
 
             <p class=" fint"> Data Vizualization Project</p>
@@ -122,7 +122,7 @@
             window.location.href="assets/Rpsfin/RPS FINAL.html";
               }
               function handleClick8() {
-            window.location.href="assets/Rpsfin/RPS FINAL.html";
+            window.location.href="https://areef-h.github.io/CR7Stats/";
               }
               function handleClick5() {
             window.location.href="https://www.youtube.com/watch?v=VUvFjS1GmTs";
