--- a/front.html
+++ b/front.html
@@ -10,7 +10,7 @@
         
 
         <div class="k">
-          <img class = "new" src="assets/Imagesw/Capture232.JPG">
+          <img class = "new" src="assets/Imagesw/Profile.jpg">
         </div>
         <div class="container1">    
           <p class="free1">Hi I'm</p>   
