--- a/About.html
+++ b/About.html
@@ -23,7 +23,7 @@ My aspirations are to become a Software engineer, developer, machine learning en
     Also, below are all the languages I know.
 </p>
                   
-          <img class="circlec" src="assets/Imagesw/Capture232.JPG">
+          <img class="circlec" src="assets/Imagesw/Profile.jpg">
           </div>
       </div>
 
